--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,12 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+             
+        <dependency>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <version>3.8.0</version>
+        </dependency>
+
     </dependencies>
 </project>
