--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
 				 <artifactId>maven-compiler-plugin</artifactId>
 				 <version>3.10.1</version>
 				<configuration>
+					<includes>
+            					<include>**/.java</include>
+          				</includes>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
