--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,12 @@
 			<plugin>
 				 <groupId>org.apache.maven.plugins</groupId>
 				 <artifactId>maven-compiler-plugin</artifactId>
-				 <version>3.10.1</version>
+				<version>2.5.1</version>
 				<configuration>
 					<includes>
-            					<include>base.Market_automation_script.java</include>
+						<sourceEncoding>UTF-8</sourceEncoding>
+<!--						<encoding>UTF-8</encoding>-->
+						<include>base.Market_automation_script</include>
           				</includes>
 					<source>1.8</source>
 					<target>1.8</target>
